cmake_minimum_required(VERSION 3.25)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
option(USE_LUAJIT "Link agains luajit to better performance" OFF)

# check if inside some project (for pd-else)
if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    project(pdlua)
endif()

set(PDCMAKE_FILE ${CMAKE_BINARY_DIR}/pd.cmake)
set(PDCMAKE_VERSION "v0.2.8")
if(NOT EXISTS "${PDCMAKE_FILE}")
    file(DOWNLOAD https://raw.githubusercontent.com/pure-data/pd.cmake/refs/tags/${PDCMAKE_VERSION}/pd.cmake ${PDCMAKE_FILE})
endif()
include(${PDCMAKE_FILE})

# check if not lua was added before (for pd4web)
if(NOT TARGET lua AND NOT USE_LUAJIT)
    message(WARNING "Using Local Lua")
    add_library(lua STATIC "${CMAKE_CURRENT_SOURCE_DIR}/lua/onelua.c")
    target_compile_definitions(lua PUBLIC "-DMAKE_LIB")
    set_target_properties(lua PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()

if(NOT TARGET pdlua)
    pd_add_external(pdlua ${CMAKE_CURRENT_SOURCE_DIR}/pdlua.c)
    pd_add_datafile(pdlua ${CMAKE_CURRENT_SOURCE_DIR}/pd.lua)
    pd_add_datafile(pdlua "${CMAKE_CURRENT_SOURCE_DIR}/pdlua/tutorial/examples/pdx.lua")
    if(USE_LUAJIT)
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(LUAJIT REQUIRED luajit)
        target_include_directories(pdlua PRIVATE ${LUAJIT_INCLUDE_DIRS})
        target_link_libraries(pdlua PRIVATE ${LUAJIT_LIBRARIES})
    else()
    target_include_directories(pdlua PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lua")
        target_link_libraries(pdlua PUBLIC lua)
    endif()

else()
    target_sources(pdlua PUBLIC "${LIB_DIR}/pdlua.c")
endif()
